# celerystar

./: .coverage  .gitignore  .travis.yml  example.py  pyproject.toml  setup.cfg  tests.py
celerystar/: __init__.py  celerystar.py
celerystar_apistar/: __init__.py  compat.py  conneg.py  document.py  exceptions.py  formats.py  http.py  test.py  types.py  utils.py  validators.py
celerystar_apistar/client/: __init__.py  auth.py  client.py  transports.py  utils.py
celerystar_apistar/codecs/: __init__.py  download.py  jsondata.py  jsonschema.py  openapi.py  text.py
celerystar_apistar/server/: __init__.py  adapters.py  app.py  asgi.py  components.py  core.py  handlers.py  injector.py  router.py  staticfiles.py  templates.py  validation.py  wsgi.py
scripts/: lint  publish  test
